--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -18,6 +18,7 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
 
+<div class="card-panel teal lighten-2"><h3>Hello Material ;)</h3></div>
 
 <div class="header" align=CENTER>
   <H1 align=CENTER>:: PuZZleDucK Industries ::</H1>
