add/upadte images and add images to prototype

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -104,7 +104,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Linux Kernel</h3>
+          <h3 class="activator"><i class="material-icons small">memory</i> - Linux Kernel</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/tux.png" alt="icon">
@@ -131,7 +131,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Electronics &amp; Hardware</h3>
+          <h3 class="activator"><i class="material-icons small">developer_board</i> - Electronics &amp; Hardware</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/hardware.png" alt="icon">
@@ -164,7 +164,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - The RepWeb</h3>
+          <h3 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/reprap.png" alt="icon">
@@ -188,10 +188,10 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Javascript</h3>
+          <h3 class="activator"><i class="material-icons small">web</i> - Javascript</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="IMAGE_SOURCE" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/HTML_5.jpg" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
@@ -209,7 +209,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Hackathon Projects</h3>
+          <h3 class="activator"><i class="material-icons small">weekend</i> - Hackathon Projects</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/gnu.png" alt="icon">
@@ -238,7 +238,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Java &amp; Android</h3>
+          <h3 class="activator"><i class="material-icons small">devices</i> - Java &amp; Android</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/duke.png" alt="icon">
@@ -268,7 +268,7 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - 3D Designs</h3>
+          <h3 class="activator"><i class="material-icons small">style</i> - 3D Designs</h3>
         </div>
         <div class="activator">
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/openscad.png" alt="icon">
@@ -300,10 +300,10 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Freedom of Information</h3>
+          <h3 class="activator"><i class="material-icons small">remove_red_eye</i> - Freedom of Information</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="IMAGE_SOURCE" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/right_to_know.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
@@ -325,10 +325,10 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Haskell</h3>
+          <h3 class="activator"><i class="material-icons small">keyboard</i> - Haskell</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="IMAGE_SOURCE" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell-Logo.svg" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
@@ -346,10 +346,10 @@
     <div class="col s12 m6">
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">alarm</i> - Testing</h3>
+          <h3 class="activator"><i class="material-icons small">assignment</i> - Testing</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="IMAGE_SOURCE" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/cards.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
