--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -191,7 +191,7 @@
           <h3 class="activator"><i class="material-icons small">web</i> - Javascript</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/HTML_5.jpg" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/HTML_5.png" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
@@ -328,7 +328,7 @@
           <h3 class="activator"><i class="material-icons small">keyboard</i> - Haskell</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell-Logo.svg" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell_Logo.svg" alt="icon">
         </div>
         <div class="card-content activator">
           <p class="flow-text activator">PROJECT_DESCRIPTION</p>
