--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -20,18 +20,19 @@
 
   <div class="col s12 m12 l12 card-panel orange darken-3">
     <ul id="dropDown" class="dropdown-content brown darken-4">
-       <li><a href="#!">About</a></li>
+       <li><a href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a></li>
        <li class="divider"></li>
-       <li><a href="#!">LinkedIn</a></li>
-       <li><a href="#!">GitHub</a></li>
-       <li><a href="#!">Twitter</a></li>
+       <li><a href="https://www.linkedin.com/in/puzzleduck">LinkedIn</a></li>
+       <li><a href="https://github.com/PuZZleDucK">GitHub</a></li>
+       <li><a href="https://twitter.com/_PuZZleDucK_">Twitter</a></li>
+       <li><a href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></li>
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4">
-          <a href="#" class="brand-logo center"><i class="material-icons small">extension</i> PuZZleDucK <i class="material-icons small right">extension</i></a>
+          <div><a href="#" class="brand-logo center"><i class="material-icons small left">extension</i>  PuZZleDucK</a></div>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
              <!-- Dropdown Trigger -->
-             <li><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li>
+             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li>
           </ul>
        </div>
     </nav>
@@ -389,107 +390,18 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </div>
 
 
 
-
-
-
-
-
-
-
   <footer class="page-footer orange darken-3">
-     <div class="row">
-        <div class="col s12 m6 l6">
-           <h5 class="white-text">Footer Content</h5>
-        </div>
-        <div class="col s12 m6 l6">
-          <ul>
-              <li><a href="#" class="grey-text text-lighten-4 right">About</a></li> <br />
-              <li><a href="#" class="grey-text text-lighten-4 right">Contact</a></li>
-           </ul>
-        </div>
-     </div>
      <div class="footer-copyright">
         <div class="container">
            © 2017 PuZZleDucK
-           <a class="grey-text text-lighten-4 right" href="#!">Mailto link</a>
+           <a class="grey-text text-lighten-4 right" href="mailto:puzzleduck@gmail.com">Email PuZZleDucK</a>
         </div>
      </div>
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="lower"><nav> <ul>
-    <table><tr><td>
-      <H2 align=CENTER>Other places</H2>
-      <H4 align=CENTER><a href="https://github.com/PuZZleDucK">GitHub</a></H4>
-      <H4 align=CENTER><a href="https://twitter.com/_PuZZleDucK_">Twitter</a></H4>
-      <H4 align=CENTER><a href="http://www.thingiverse.com/PuZZleDucK/designs/">Thingiverse account</a></H4>
-      <H4 align=CENTER><a href="http://www.instructables.com/member/PuZZleDucK/">Instructables</a></H4>
-    </td><td>
-      <H2 align=CENTER>Old places</H2>
-      <H4 align=CENTER><a href="http://code.google.com/u/PuZZleDucK/">GoogleCode</a></H4>
-      <H4 align=CENTER><a href="http://sourceforge.net/u/puzzleduck99/profile/">SourceForge</a></H4>
-      <H4 align=CENTER><a href="https://plus.google.com/111394115531877605652/posts">G+</a></H4>
-      <H4 align=CENTER><a href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></H4>
-      <H4 align=CENTER><a href="HTML5/mandel.html">Old HTML5 stuff</a></H4>
-      <H4 align=CENTER></H4>
-    </td></tr></table>
-  </ul></nav></div>
-
-
-  <aside id="handylinks">
-    <figure>
-      <img src="http://reprap.org/mediawiki/reprap_logo.png" alt="RepRap" />
-    </figure>
-    <H2 align=CENTER>Handy Links of the moment:</H2>
-    <p align=CENTER>Self replicating machines with:</p>
-    <H3 align=CENTER><a href="http://reprap.org/wiki/RepRap">RepRap Wiki</a></H3>
-    <p align=CENTER>Self replicating code with:</p>
-    <H3 align=CENTER><a href="http://www.javaspecialists.eu">Dr Heinz Max Kabutz</a></H3>
-  </aside>
-
-
-
-    <div class="footer">
-        <p>(c) Me &amp; GPL3.</p>
-    </div>
-
 
 </body>
 </html>
