fix menu and add tooltips

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -30,7 +30,7 @@
     <nav>
        <div class="nav-wrapper brown darken-4">
           <div><a href="#" class="brand-logo center"><i class="material-icons small left">extension</i>  PuZZleDucK</a></div>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <ul id="nav-mobile" class="right">
              <!-- Dropdown Trigger -->
              <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li>
           </ul>
@@ -46,7 +46,7 @@
 
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">account_balance</i> - Code for Australia</h3>
         </div>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">cast</i> - Free Software Melbourne</h3>
         </div>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">memory</i> - Linux Kernel</h3>
         </div>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">developer_board</i> - Electronics &amp; Hardware</h3>
         </div>
@@ -163,7 +163,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h3>
         </div>
@@ -187,7 +187,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">web</i> - Javascript</h3>
         </div>
@@ -208,7 +208,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">weekend</i> - Hackathon Projects</h3>
         </div>
@@ -237,7 +237,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">devices</i> - Java &amp; Android</h3>
         </div>
@@ -267,7 +267,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">style</i> - 3D Designs</h3>
         </div>
@@ -299,7 +299,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">remove_red_eye</i> - Freedom of Information</h3>
         </div>
@@ -324,7 +324,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">keyboard</i> - Haskell</h3>
         </div>
@@ -345,7 +345,7 @@
     </div>
 
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">assignment</i> - Testing</h3>
         </div>
@@ -367,7 +367,7 @@
 
 <!-- TEMPLATE
     <div class="col s12 m6">
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">alarm</i> - FILLER_TITLE</h3>
         </div>
