--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -31,8 +31,7 @@
        <div class="nav-wrapper brown darken-4">
           <div><a href="#" class="brand-logo center"><i class="material-icons small left">extension</i>  PuZZleDucK</a></div>
           <ul id="nav-mobile" class="right">
-             <!-- Dropdown Trigger -->
-             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li>
+             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
        </div>
     </nav>
@@ -54,7 +53,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/CfA_Logo_black.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">Working with the Department of Treasury and Finance of Victoria we built a system for collecting contracting information from external sources and enabling a digital workflow or reporting and monitoring on those contracts ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Code for Australia Project Links:<i class="material-icons right">close</i></span>
@@ -83,7 +82,7 @@
           <img class="right small activator" height="100" src="http://www.softwarefreedomday.org/countdown/banner1-UTC-4-en.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">I'm an active member of Melbournes local FOSS community and have been an organizer of Free Software Melbourne since 2013. I often present our regular Gnews segment along with preparing flyers and other materials for our events throughout the year ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -111,7 +110,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/tux.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">The Linux kernel and the GNU environment form the basis for any FOSS system and I wanted to know how it worked. Contribuiting to the kernel has been a rewarding experience with many important lessons ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -138,7 +137,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/hardware.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">Through an interest in 3D printing I have begun exploring the electronics space and have developed a few 3D models that may be of use to the DIY electronics enthusiast ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -171,7 +170,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/reprap.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">This was an old project that enabled customized RepRaps to connect to a central server to report local conditions and retrive instructions. It is now decommissioned and only kept here as a reminder of fun times ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -195,7 +194,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/HTML_5.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">The web is the new desktop, which means these must be my "new desktop apps". Click to see pure HTML5 in all it's glory, including a character frequency analyzer and ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -216,7 +215,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/gnu.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">I've participated in a few hackathons in my day, and despite the poor quality and hasty workmanship, I'm still proud of the results. From cultural exploration to citizen budgeting ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -230,7 +229,9 @@
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Budgethack</p>
-            <a href="#"> FIRST_LINK</a>
+            <a href="https://budget-2point0.herokuapp.com/">Application</a>
+            <a href="https://github.com/PuZZleDucK/Budget-2.0">Source Code</a>
+            <a href="https://semaphoreci.com/puzzleduck/budget-2-0">CI/CD</a>
           </div>
         </div>
       </div>
@@ -245,7 +246,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/duke.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">Java was the first programming language I learned and it tought me many good (and bad) habbits. Android was a natural extention and fusion of Java and Linux. The android applications I've written are avaliable on the play store under the company "PuZZleDucK Industries" ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -275,7 +276,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/openscad.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">The possibilities for 3D printing today are just amazing and 3D printing invigorated my interest in all thing electronic and (almost ironicaly) opened up the possibility for me to create truly unique objects ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -307,7 +308,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/right_to_know.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">Through the RightToKnow project I have made a few Freedom of Information requests to the Victorian and Australian governments. Click here to see 10 years of contracting data released to the public :D ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
@@ -332,7 +333,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/Haskell_Logo.svg" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">Learning Haskell was maybe the best descision of my life. It brought relevance and utility to four years of dedicated study of logic and opened up a world of possibilities in maths ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
@@ -353,7 +354,7 @@
           <img class="right small activator" height="100" src="http://puzzleduck.org/img/cards.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">PROJECT_DESCRIPTION</p>
+          <p class="flow-text activator">I did testing and compliance of gaming machines for almost a decade and have given a few presentations on the topic ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">REVEAL_TITLE_Links:<i class="material-icons right">close</i></span>
