test static size

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -47,7 +47,7 @@
 
 
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more" width="300px">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">account_balance</i> - Code for Australia</h3>
         </div>
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more" width="300px>
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">cast</i> - Free Software Melbourne</h3>
         </div>
