--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -5,10 +5,9 @@
   <meta name="description" content="home page">
   <meta name="author" content="PuZZleDucK">
   <title>PuZZleDucK dot org</title>
-  <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="css/puzzleduck.css" media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -47,7 +46,7 @@
 
 
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more" width="300px">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped small-card" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">account_balance</i> - Code for Australia</h3>
         </div>
@@ -74,7 +73,7 @@
         </div>
       </div>
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more" width="300px>
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped small-card" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">cast</i> - Free Software Melbourne</h3>
         </div>
