--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -40,13 +40,13 @@
 
 
   <div class="row">
-    <div class="col s12 m12 cards-container">
+    <div class="col s12 m4 cards-container">
 
 
 
 
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped small-card" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">account_balance</i> - Code for Australia</h3>
         </div>
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped small-card" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
+      <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">cast</i> - Free Software Melbourne</h3>
         </div>
