--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -155,6 +155,12 @@
         </div>
       </div>
 
+
+
+
+    </div>
+    <div class="col s12 m4 cards-container">
+
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
           <h3 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h3>
@@ -252,6 +258,9 @@
           </div>
         </div>
       </div>
+
+    </div>
+    <div class="col s12 m4 cards-container">
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
