--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="PuZZleDucK">
   <title>PuZZleDucK dot org</title>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Nova Mono' rel='stylesheet'>
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="css/puzzleduck.css" media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
