--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,7 +29,7 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4">
-          <div><h1><a href="http://puzzleduck.org" class="brand-logo center"><i class="material-icons small left">extension</i>  PuZZleDucK</a></h1></div>
+          <div><a href="http://puzzleduck.org" class="brand-logo center"><i class="material-icons small left">extension</i> <h1>PuZZleDucK</h1></a></div>
           <ul id="nav-mobile" class="right">
              <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
