--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,9 +29,9 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4">
-          <div><a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2></a></div>
+          <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2></a>
           <ul id="nav-mobile" class="right">
-             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons small left">extension</i></a></li> <!-- Dropdown Trigger -->
+             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
           </ul>
        </div>
     </nav>
