--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -41,7 +41,7 @@
 
 
   <div class="row">
-    <div class="col s12 m4 cards-container">
+    <div class="col s12 m6 l4 cards-container">
 
 
 
@@ -160,7 +160,7 @@
 
 
     </div>
-    <div class="col s12 m4 cards-container">
+    <div class="col s12 m6 l4 cards-container">
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
@@ -261,7 +261,7 @@
       </div>
 
     </div>
-    <div class="col s12 m4 cards-container">
+    <div class="col s12 m6 l4 cards-container">
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
