--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -82,7 +82,7 @@
           <img class="right small activator" height="100" src="http://www.softwarefreedomday.org/countdown/banner1-UTC-4-en.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">I'm an active member of Melbournes local FOSS community and have been an organizer of Free Software Melbourne since 2013. I often present our regular Gnews segment along with preparing flyers and other materials for our events throughout the year ...</p>
+          <p class="flow-text activator">I have been an organizer of Free Software Melbourne since 2013 and I often present our regular Gnews segment along with preparing flyers and other materials for our events throughout the year ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
