title/menu test

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,10 +29,10 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4">
-          <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2></a>
+          <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2>
           <ul id="nav-mobile" class="right">
              <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
-          </ul>
+          </ul></a>
        </div>
     </nav>
     <h4 class="white-text center">The projects and ponderings of Ben Minerds</h4>
@@ -164,21 +164,27 @@
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h3>
+          <h3 class="activator"><i class="material-icons small">devices</i> - Java &amp; Android</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/reprap.png" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/duke.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">This was an old project that enabled customized RepRaps to connect to a central server to report local conditions and retrive instructions. It is now decommissioned and only kept here as a reminder of fun times ...</p>
+          <p class="flow-text activator">Java was the first programming language I learned and it tought me many good (and bad) habbits. Android was a natural extention and fusion of Java and Linux. The android applications I've written are avaliable on the play store under the company "PuZZleDucK Industries" ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
-            <p>LINK_TEXT</p>
+            <p>Blogs</p>
             <ul>
-              <li><a href="RepRap/RepLogForm.html"> RepRap Live Log Entry Form (The InternetOfThingiverse)</a></li>
-              <li><a href="RepRap/index.html"> RepRap Network Pages</a></li>
+              <li><a href="DevAdventures/da01.html"> 01 - Orbital Live Wallpaper</a></li>
+              <li><a href="DevAdventures/da02.html"> 02 - Data retention</a></li>
+              <li><a href="DevAdventures/da03.html"> 03 - XDA Developers "BASH Obsfucation Contest" entry</a></li>
+              <li><a href="DevAdventures/da04.html"> 04 - Embedding page data in a link</a></li>
+              <li><a href="DevAdventures/da05.html"> 05 - Gosling nightmares</a></li>
+              <li><a href="DevAdventures/da06.html"> 06 - Git yourself a schooling</a></li>
+              <li><a href="DevAdventures/da07.html"> 07 - An Array without bounds (more Gosling nightmares)</a></li>
+              <li><a href="DevAdventures/da08.html"> 08 - Lambdas and LEDs</a></li>
             </ul>
           </div>
         </div>
@@ -234,31 +240,26 @@
 
       <div class="card brown darken-4 z-depth-3 activator waves-effect waves-block waves-dark tooltipped" data-position="top" data-delay="50" data-tooltip="Click to reveal more">
         <div class="card-title center activator">
-          <h3 class="activator"><i class="material-icons small">devices</i> - Java &amp; Android</h3>
+          <h3 class="activator"><i class="material-icons small">wifi_tethering</i> - The RepWeb</h3>
         </div>
         <div class="activator">
-          <img class="right small activator" height="100" src="http://puzzleduck.org/img/duke.png" alt="icon">
+          <img class="right small activator" height="100" src="http://puzzleduck.org/img/reprap.png" alt="icon">
         </div>
         <div class="card-content activator">
-          <p class="flow-text activator">Java was the first programming language I learned and it tought me many good (and bad) habbits. Android was a natural extention and fusion of Java and Linux. The android applications I've written are avaliable on the play store under the company "PuZZleDucK Industries" ...</p>
+          <p class="flow-text activator">This was an old project that enabled customized RepRaps to connect to a central server to report local conditions and retrive instructions. It is now decommissioned and only kept here as a reminder of fun times ...</p>
         </div>
         <div class="card-reveal orange darken-3">
           <span class="card-title white-text text-darken-4">Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
-            <p>Blogs</p>
+            <p>LINK_TEXT</p>
             <ul>
-              <li><a href="DevAdventures/da01.html"> 01 - Orbital Live Wallpaper</a></li>
-              <li><a href="DevAdventures/da02.html"> 02 - Data retention</a></li>
-              <li><a href="DevAdventures/da03.html"> 03 - XDA Developers "BASH Obsfucation Contest" entry</a></li>
-              <li><a href="DevAdventures/da04.html"> 04 - Embedding page data in a link</a></li>
-              <li><a href="DevAdventures/da05.html"> 05 - Gosling nightmares</a></li>
-              <li><a href="DevAdventures/da06.html"> 06 - Git yourself a schooling</a></li>
-              <li><a href="DevAdventures/da07.html"> 07 - An Array without bounds (more Gosling nightmares)</a></li>
-              <li><a href="DevAdventures/da08.html"> 08 - Lambdas and LEDs</a></li>
+              <li><a href="RepRap/RepLogForm.html"> RepRap Live Log Entry Form (The InternetOfThingiverse)</a></li>
+              <li><a href="RepRap/index.html"> RepRap Network Pages</a></li>
             </ul>
           </div>
         </div>
       </div>
+
 
 
 
