--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,10 +29,10 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4">
-          <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2>
-          <ul id="nav-mobile" class="right">
-             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
-          </ul></a>
+         <ul id="nav-mobile" class="right">
+            <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
+         </ul>
+          <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2></a>
        </div>
     </nav>
     <h4 class="white-text center">The projects and ponderings of Ben Minerds</h4>
