title/menu test

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -30,7 +30,7 @@
     <nav>
        <div class="nav-wrapper brown darken-4">
          <ul id="nav-mobile" class="right">
-            <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right">menu</i></a></li> <!-- Dropdown Trigger -->
+            <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
          </ul>
           <a href="http://puzzleduck.org" class="brand-logo center"><h2>PuZZleDucK</h2></a>
        </div>
