title/menu test

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -28,7 +28,7 @@
        <li><a href="https://play.google.com/store/apps/developer?id=PuZZleDucK+Industries.">Android</a></li>
     </ul>
     <nav>
-       <div class="nav-wrapper brown darken-4">
+       <div class="nav-wrapper brown darken-4 valign">
          <ul id="nav-mobile" class="right">
             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
          </ul>
