--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,7 +29,7 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4 valign">
-         <ul id="nav-mobile" class="right">
+         <ul id="nav-mobile" class="right valign">
             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
          </ul>
           <a href="http://puzzleduck.org" class="brand-logo center valign"><h2>PuZZleDucK</h2></a>
