title/menu test

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -29,10 +29,10 @@
     </ul>
     <nav>
        <div class="nav-wrapper brown darken-4 valign">
-         <ul id="nav-mobile" class="right valign">
-            <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
-         </ul>
-          <a href="http://puzzleduck.org" class="brand-logo center valign"><h2>PuZZleDucK</h2></a>
+          <a href="http://puzzleduck.org" class="brand-logo center valign">PuZZleDucK</a>
+          <ul id="nav-mobile" class="right valign">
+             <li style="width: 300px !important"><a class="dropdown-button" href="#!" data-activates="dropDown"><i class="material-icons right valign">menu</i></a></li> <!-- Dropdown Trigger -->
+          </ul>
        </div>
     </nav>
     <h4 class="white-text center">The projects and ponderings of Ben Minerds</h4>
