--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
 
-  <div class="col s12 m12 l12 card-panel orange darken-3">
+  <div class="col card-panel orange darken-3 no-pad">
     <ul id="dropDown" class="dropdown-content brown darken-4">
        <li><a href="https://github.com/PuZZleDucK/PuZZleDucK.ORG">PuZZleDucK.ORG Source Code</a></li>
        <li class="divider"></li>
