update cfa links

--- a/test-html/material/index.html
+++ b/test-html/material/index.html
@@ -61,11 +61,11 @@
           <span class="card-title white-text text-darken-4">Code for Australia Project Links:<i class="material-icons right">close</i></span>
           <div class="card brown darken-4 z-depth-3">
             <p>Saying something about this link</p>
-            <a href="https://github.com/CodeforAustralia/dtf-genesis"> Source Code</a>
+            <a href="https://github.com/PuZZleDucK/dtf-genesis"> Source Code</a>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Saying something about this link</p>
-            <a href="http://dtf-genesis.herokuapp.com/"> Deployed Version</a>
+            <a href="https://cfa-dtf.herokuapp.com/"> Deployed Version</a>
           </div>
           <div class="card brown darken-4 z-depth-3">
             <p>Saying something about this link</p>
